# Intelligent-Car

./: .gitignore  README.md
ESP32/: README.md
ESP32/camera_gimbal_test/: README.md  camera_gimbal_test.ino  (+1 more)
base/: README.md  main.py  requirements.txt
camera/: README.md  camera_debug_stream.py
car_model_training/: 训练说明.md
docs/: deployment.md
python/: README.md  camera.py  main.py  motion_test.py  requirements.txt
ros2/: README.md
ros2/ros2_ws/src/smart_car_bringup/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/smart_car_bringup/config/: full_stack.yaml
ros2/ros2_ws/src/smart_car_bringup/launch/: full_stack.launch.py  manual_control.launch.py  perception.launch.py
ros2/ros2_ws/src/smart_car_bringup/smart_car_bringup/: __init__.py
ros2/ros2_ws/src/smart_car_nodes/: package.xml  setup.cfg  setup.py
ros2/ros2_ws/src/smart_car_nodes/smart_car_nodes/: __init__.py  action_sequences.py  camera_probe.py  decision_engine.py  inference_worker.py  lane_geometry.py  legacy_monitor_state.py  legacy_monitor_ui.py  motion.py  perception_models.py  protocol.py  ros_messages.py  serial_driver.py  worker_protocol.py
ros2/ros2_ws/src/smart_car_nodes/smart_car_nodes/model_utils/: __init__.py  acl_utils.py  cv_utils.py  logger.py
ros2/ros2_ws/src/smart_car_nodes/smart_car_nodes/models/: __init__.py  base_model.py  lfnet.py  quick_lf.py  yolov5.py
ros2/ros2_ws/src/smart_car_nodes/smart_car_nodes/nodes/: __init__.py  camera_node.py  decision_node.py  esp32_driver_node.py  lane_node.py  manual_control_node.py  monitor_node.py  sign_detector_node.py
(+82 files in other folders)
